--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -25,13 +25,13 @@ jobs:
         run: |
           rsync -rc --exclude-from="$GITHUB_WORKSPACE/.distignore" "$GITHUB_WORKSPACE/" release/ --delete --delete-excluded
           cd "${GITHUB_WORKSPACE}/release" || exit
-          zip -r "${GITHUB_WORKSPACE}/instamojo-for-give.zip" .
+          zip -r "${GITHUB_WORKSPACE}/mg-instamojo-for-give.zip" .
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{github.workspace}}/instamojo-for-give.zip
-          asset_name: instamojo-for-give.zip
+          asset_path: ${{github.workspace}}/mg-instamojo-for-give.zip
+          asset_name: mg-instamojo-for-give.zip
           asset_content_type: application/zip
