--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,11 @@
 		"psr-4": {
 			"MG\\Instamojo\\GiveWP\\": "src/"
 		}
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
